# perseus

./: AGENTS.md  NEW_ARCHICTETURE.md  pyproject.toml  pyrightconfig.json
docs/: ARCHITECTURE.md  BACKLOG.md  EVOLUTION_PLAN.md  HOW_IT_WORKS.md  METRICS_EXPLANATION.md  SESSION_LOG.md
labs/embedding_distribution/: distribution_analyzer.py
labs/embedding_distribution/results/Experimento_Distribuicao_27_Maio_2026_16h43m24s/: distribution_report.json
labs/hopfield_experiments/: hopfield_runner.py  report.md  semantic_retrieval.py
labs/hopfield_experiments/results/: amnesia_confabulatoria_alien_20260518_140631.json  amnesia_confabulatoria_alien_20260518_155810.json
labs/semantic_experiments/: granularity_runner.py  test_25_sentences.py
labs/semantic_experiments/results/: report.md
skills/embedding-distribution-analysis/: SKILL.md
skills/hopfield-experiment/: SKILL.md
skills/semantic-granularity-experiment/: SKILL.md
src/automaton/: event_model_automaton.py
src/embedding/: __init__.py  embedding_viz.py  semantic_embedder.py
src/encoder/: encoder.py
src/neocortex/: event.py  event_schema.py  neocortex.py
src/neural_nets/: hopfield_net.py
src/perseus/automaton/: event_model_automaton.py  grid.py  hippocampal.py
src/perseus/encoder/: __init__.py  encoder.py
src/perseus/neocortex/: __init__.py  episode.py  event.py  event_point.py  event_schema.py  neocortex.py  point.py
src/perseus/viz/: automaton_viz.py
src/viz/: automaton_viz.py
user_sessions/: SESSION_001.md  SESSION_002.md
(+14 files in other folders)
