[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "perseus"
version = "0.1.0"
description = "Perseus — Neural-inspired memory system built on Brian's Brain CA"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pygame>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
perseus-viz = "viz.automaton_viz:main"

[tool.setuptools.packages.find]
where = ["src"]
